--- a/app/src/main/res/layout-land/fragment_lista_medicamentos.xml
+++ b/app/src/main/res/layout-land/fragment_lista_medicamentos.xml
@@ -71,8 +71,9 @@
         android:layout_width="140dp"
         android:layout_height="140dp"
         android:src="@drawable/caixavazia2"
-        app:layout_constraintBottom_toTopOf="@id/txt_no_data"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -87,10 +88,9 @@
         android:fontFamily="sans-serif"
         android:textColor="?android:textColorPrimary"
         android:textSize="28sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/caixa_vazia"/>
 
 
     <com.google.android.gms.ads.AdView
