--- a/app/src/main/res/layout-land/fragment_detalhes_medicamentos.xml
+++ b/app/src/main/res/layout-land/fragment_detalhes_medicamentos.xml
@@ -1,111 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.FragmentDetalhesMedicamentos">
 
     <TextView
         android:id="@+id/label_data_inicio_tratamento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="16dp"
+        android:text="Início Tratamento: "
         android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="Início Tratamento: "/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/data_inicio_tratamento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginHorizontal="16dp"
-        android:textSize="20sp"
         android:textColor="?android:textColorPrimary"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/label_data_inicio_tratamento"
         app:layout_constraintTop_toTopOf="@id/label_data_inicio_tratamento"
-        app:layout_constraintBottom_toBottomOf="@id/label_data_inicio_tratamento"
-        tools:text="12/11/2022"/>
+        tools:layout_editor_absoluteY="16dp"
+        tools:text="12/11/2022" />
 
     <TextView
         android:id="@+id/label_data_termino_tratamento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginHorizontal="16dp"
+        android:text="Término em: "
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/label_data_inicio_tratamento"
-        android:text="Término em: "/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/label_data_inicio_tratamento" />
 
     <TextView
         android:id="@+id/data_termino_tratamento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/data_inicio_tratamento"
-        app:layout_constraintEnd_toEndOf="@id/data_inicio_tratamento"
-        android:textSize="20sp"
         android:textColor="?android:textColorPrimary"
-        app:layout_constraintTop_toTopOf="@id/label_data_termino_tratamento"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@id/label_data_termino_tratamento"
-        tools:text="17/11/2022"/>
+        app:layout_constraintEnd_toEndOf="@id/data_inicio_tratamento"
+        app:layout_constraintStart_toStartOf="@id/data_inicio_tratamento"
+        app:layout_constraintTop_toTopOf="@id/label_data_termino_tratamento"
+        tools:text="17/11/2022" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_armar_alarme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/adView"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginVertical="10dp"
-        app:layout_constraintTop_toBottomOf="@id/med_detalhes_recycler_view"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="16dp"
         android:src="@drawable/ic_baseline_timer_24"
-        app:tint="@color/white"/>
+        app:layout_constraintBottom_toTopOf="@+id/label_horario_dose"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/white" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_cancelar_alarme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="?android:textColorPrimary"
         android:layout_marginVertical="10dp"
-        app:borderWidth="0dp"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/med_detalhes_recycler_view"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/adView"
+        android:backgroundTint="@color/black"
         android:src="@drawable/ic_baseline_timer_off_24"
-        app:tint="?android:textColorSecondary"/>
+        android:visibility="gone"
+        app:borderWidth="0dp"
+        app:layout_constraintBottom_toTopOf="@id/adView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/med_detalhes_recycler_view"
+        app:tint="@color/white" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_parar_som"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="?android:textColorPrimary"
         android:layout_marginVertical="10dp"
-        app:borderWidth="0dp"
-        android:visibility="gone"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:backgroundTint="@color/black"
         android:src="@drawable/ic_baseline_timer_off_24"
-        app:tint="?android:textColorSecondary"/>
-
-
-
+        android:visibility="gone"
+        app:borderWidth="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/white" />
 
 
     <TextView
         android:id="@+id/label_medicamento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="16dp"
+        android:text="Medicamento"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/label_data_termino_tratamento"
-        android:text="Medicamento"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/label_data_termino_tratamento" />
 
     <TextView
         android:id="@+id/label_horario_dose"
@@ -113,49 +110,49 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
+        android:text="horário dose"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/label_data_termino_tratamento"
-        android:text="horário dose"/>
+        app:layout_constraintTop_toBottomOf="@id/label_data_termino_tratamento" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/med_detalhes_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="0dp"
         android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:id="@+id/med_detalhes_recycler_view"
-        app:layout_constraintTop_toBottomOf="@id/label_medicamento"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/adView"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/medicamento"
-        app:layout_constraintBottom_toTopOf="@id/btn_armar_alarme"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/label_medicamento"
+        tools:itemCount="4"
+        tools:listitem="@layout/item_dose" />
 
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
+    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
         ads:layout_constraintBottom_toTopOf="@id/dica_tomar_dose"
-        ads:layout_constraintStart_toStartOf="parent"
         ads:layout_constraintEnd_toEndOf="parent"
-        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
-    </com.google.android.gms.ads.AdView>
+        ads:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/dica_tomar_dose"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/dica_tomar_dose"
-        app:strokeColor="#FA5252"
         android:layout_margin="16dp"
-        app:strokeWidth="2dp"
-        android:clickable="true"
         android:layout_marginBottom="16dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:focusable="true">
+        app:layout_constraintStart_toStartOf="parent"
+        app:strokeColor="#FA5252"
+        app:strokeWidth="2dp">
 
         <TextView
 
@@ -163,12 +160,10 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:text="@string/res_dica_confirmar_dose"
-            android:textSize="22sp"
-            android:textColor="?android:textColorPrimary"
-            />
+            android:textColor="@color/black"
+            android:textSize="22sp" />
 
     </com.google.android.material.card.MaterialCardView>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
