--- a/app/src/main/res/layout/fragment_cadastrar_novo_medicamento.xml
+++ b/app/src/main/res/layout/fragment_cadastrar_novo_medicamento.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/label_act_adicionar_medicamentos"
-            android:textColor="@color/black"
+            android:textColor="?android:textColorPrimary"
             android:textSize="32sp"
             android:fontFamily="sans-serif-condensed-medium"
             app:layout_constraintStart_toStartOf="parent"
@@ -78,9 +78,9 @@
             android:text="Por quanto tempo você vai tomar esse medicamento?"
             android:textSize="22sp"
             android:fontFamily="sans-serif-medium"
-            android:textColor="@color/black"
+            android:textColor="?android:textColorPrimary"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/adView"
+            app:layout_constraintTop_toBottomOf="@id/til_medicine_qnt_per_day"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginHorizontal="16dp"/>
@@ -200,6 +200,8 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:mask="__/__/____"
             android:textSize="28sp"
+            android:textColorHint="@color/light_gray"
+            android:fontFamily="sans-serif"
             android:hint="data início tratamento"
             app:maskCharacter="_"
             android:layout_marginHorizontal="16dp"
@@ -235,7 +237,9 @@
             android:layout_marginTop="5dp"
             ads:layout_constraintStart_toStartOf="parent"
             ads:layout_constraintEnd_toEndOf="parent"
-            ads:layout_constraintTop_toBottomOf="@id/til_medicine_qnt_per_day"
+            ads:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            ads:layout_constraintTop_toBottomOf="@id/btn_confirm_new_medication"
             ads:adUnitId="ca-app-pub-3940256099942544/6300978111"/>
 
 
