--- a/app/src/main/res/layout/item_detalhes_medicamentos.xml
+++ b/app/src/main/res/layout/item_detalhes_medicamentos.xml
@@ -23,7 +23,8 @@
         app:layout_constraintTop_toTopOf="parent"
         android:text="@string/res_nome_med_detalhe"
         android:textSize="32sp"
-        android:textColor="@color/black"/>
+        android:textColor="?android:textColorPrimary"
+        />
 
     <TextView
         android:id="@+id/time_dosage"
@@ -35,7 +36,8 @@
         android:layout_marginHorizontal="16dp"
         app:layout_constraintEnd_toStartOf="@id/iv_status_dosage"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/black" />
+        android:textColor="?android:textColorPrimary"
+        />
 
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -44,6 +46,7 @@
         android:layout_height="32dp"
         app:civ_border_width="2dp"
         android:clickable="true"
+        app:civ_border_color="?android:textColorPrimary"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:layout_marginHorizontal="16dp"
         app:layout_constraintEnd_toEndOf="parent"
