--- a/app/src/main/res/layout/item_dose_tomada.xml
+++ b/app/src/main/res/layout/item_dose_tomada.xml
@@ -10,6 +10,7 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         app:civ_border_width="2dp"
+        app:civ_border_color="?android:textColorPrimary"
         android:layout_margin="4dp"
         android:clickable="true"
         android:background="?attr/selectableItemBackgroundBorderless"
