--- a/app/src/main/res/layout-land/fragment_detalhes_medicamentos.xml
+++ b/app/src/main/res/layout-land/fragment_detalhes_medicamentos.xml
@@ -1,108 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.FragmentDetalhesMedicamentos">
 
     <TextView
         android:id="@+id/label_data_inicio_tratamento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="Início Tratamento: "
-        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_margin="16dp"
+        android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="Início Tratamento: "/>
 
     <TextView
         android:id="@+id/data_inicio_tratamento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginHorizontal="16dp"
-        android:textColor="?android:textColorPrimary"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/label_data_inicio_tratamento"
+        android:textColor="?android:textColorPrimary"
         app:layout_constraintTop_toTopOf="@id/label_data_inicio_tratamento"
-        tools:layout_editor_absoluteY="16dp"
-        tools:text="12/11/2022" />
+        app:layout_constraintBottom_toBottomOf="@id/label_data_inicio_tratamento"
+        tools:text="12/11/2022"/>
 
     <TextView
         android:id="@+id/label_data_termino_tratamento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:text="Término em: "
-        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/label_data_inicio_tratamento" />
+        android:layout_marginHorizontal="16dp"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/label_data_inicio_tratamento"
+        android:text="Término em: "/>
 
     <TextView
         android:id="@+id/data_termino_tratamento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="?android:textColorPrimary"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@id/label_data_termino_tratamento"
-        app:layout_constraintEnd_toEndOf="@id/data_inicio_tratamento"
         app:layout_constraintStart_toStartOf="@id/data_inicio_tratamento"
+        app:layout_constraintEnd_toEndOf="@id/data_inicio_tratamento"
+        android:textSize="20sp"
+        android:textColor="?android:textColorPrimary"
         app:layout_constraintTop_toTopOf="@id/label_data_termino_tratamento"
-        tools:text="17/11/2022" />
+        app:layout_constraintBottom_toBottomOf="@id/label_data_termino_tratamento"
+        tools:text="17/11/2022"/>
+
+    <TextView
+        android:id="@+id/data_atual_selecionada"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="32sp"
+        android:layout_marginTop="20dp"
+        android:textColor="?android:textColorPrimary"
+        app:layout_constraintTop_toBottomOf="@id/label_data_termino_tratamento"
+        tools:text="17/11/2022"/>
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/back_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/label_data_termino_tratamento"
+        app:layout_constraintTop_toTopOf="@id/data_atual_selecionada"
+        app:layout_constraintBottom_toBottomOf="@id/data_atual_selecionada"
+        android:src="@drawable/baseline_arrow_back_24"
+        app:tint="?android:textColorPrimary"
+        android:background="?android:attr/actionBarItemBackground"
+        android:layout_gravity="end"
+        android:layout_marginEnd="16dp"/>
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/forward_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@id/data_termino_tratamento"
+        app:layout_constraintTop_toTopOf="@id/data_atual_selecionada"
+        app:layout_constraintBottom_toBottomOf="@id/data_atual_selecionada"
+        android:src="@drawable/baseline_arrow_forward_24"
+        app:tint="?android:textColorPrimary"
+        android:background="?android:attr/actionBarItemBackground"
+        />
+
+
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_armar_alarme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/adView"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginVertical="10dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_baseline_timer_24"
-        app:layout_constraintBottom_toTopOf="@+id/label_horario_dose"
+        app:layout_constraintTop_toBottomOf="@id/med_detalhes_recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/white" />
+        android:src="@drawable/ic_baseline_timer_24"
+        app:tint="@color/white"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_cancelar_alarme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="?android:textColorPrimary"
         android:layout_marginVertical="10dp"
-        android:backgroundTint="@color/black"
-        android:src="@drawable/ic_baseline_timer_off_24"
-        android:visibility="gone"
         app:borderWidth="0dp"
-        app:layout_constraintBottom_toTopOf="@id/adView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/med_detalhes_recycler_view"
-        app:tint="@color/white" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/adView"
+        android:src="@drawable/ic_baseline_timer_off_24"
+        app:tint="?android:textColorSecondary"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_parar_som"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="?android:textColorPrimary"
         android:layout_marginVertical="10dp"
-        android:backgroundTint="@color/black"
-        android:src="@drawable/ic_baseline_timer_off_24"
-        android:visibility="gone"
         app:borderWidth="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/white" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/ic_baseline_timer_off_24"
+        app:tint="?android:textColorSecondary"/>
+
+
+
 
 
     <TextView
         android:id="@+id/label_medicamento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="Medicamento"
-        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/label_data_termino_tratamento" />
+        android:layout_margin="16dp"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/data_atual_selecionada"
+        android:text="Medicamento"/>
 
     <TextView
         android:id="@+id/label_horario_dose"
@@ -110,49 +152,49 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
-        android:text="horário dose"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/label_data_termino_tratamento" />
+        app:layout_constraintTop_toBottomOf="@id/data_atual_selecionada"
+        android:text="horário dose"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/med_detalhes_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="0dp"
         android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@id/adView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/med_detalhes_recycler_view"
         app:layout_constraintTop_toBottomOf="@id/label_medicamento"
-        tools:itemCount="4"
-        tools:listitem="@layout/item_dose" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:listitem="@layout/item_detalhes_medicamentos"
+        app:layout_constraintBottom_toTopOf="@id/btn_armar_alarme"/>
 
-    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
         ads:layout_constraintBottom_toTopOf="@id/dica_tomar_dose"
+        ads:layout_constraintStart_toStartOf="parent"
         ads:layout_constraintEnd_toEndOf="parent"
-        ads:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+    </com.google.android.gms.ads.AdView>
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/dica_tomar_dose"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_marginBottom="16dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/dica_tomar_dose"
         app:strokeColor="#FA5252"
-        app:strokeWidth="2dp">
+        android:layout_margin="16dp"
+        app:strokeWidth="2dp"
+        android:clickable="true"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:focusable="true">
 
         <TextView
 
@@ -160,10 +202,12 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:text="@string/res_dica_confirmar_dose"
-            android:textColor="@color/black"
-            android:textSize="22sp" />
+            android:textSize="22sp"
+            android:textColor="?android:textColorPrimary"
+            />
 
     </com.google.android.material.card.MaterialCardView>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
