--- a/app/src/main/res/layout/fragment_detalhes_medicamentos.xml
+++ b/app/src/main/res/layout/fragment_detalhes_medicamentos.xml
@@ -50,6 +50,45 @@
         app:layout_constraintBottom_toBottomOf="@id/label_data_termino_tratamento"
         tools:text="17/11/2022"/>
 
+    <TextView
+        android:id="@+id/data_atual_selecionada"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="32sp"
+        android:layout_marginTop="20dp"
+        android:textColor="?android:textColorPrimary"
+        app:layout_constraintTop_toBottomOf="@id/label_data_termino_tratamento"
+        tools:text="17/11/2022"/>
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/back_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/label_data_termino_tratamento"
+        app:layout_constraintTop_toTopOf="@id/data_atual_selecionada"
+        app:layout_constraintBottom_toBottomOf="@id/data_atual_selecionada"
+        android:src="@drawable/baseline_arrow_back_24"
+        app:tint="?android:textColorPrimary"
+        android:background="?android:attr/actionBarItemBackground"
+        android:layout_gravity="end"
+        android:layout_marginEnd="16dp"/>
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/forward_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@id/data_termino_tratamento"
+        app:layout_constraintTop_toTopOf="@id/data_atual_selecionada"
+        app:layout_constraintBottom_toBottomOf="@id/data_atual_selecionada"
+        android:src="@drawable/baseline_arrow_forward_24"
+        app:tint="?android:textColorPrimary"
+        android:background="?android:attr/actionBarItemBackground"
+        />
+
+
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_armar_alarme"
@@ -104,7 +143,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="16dp"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/label_data_termino_tratamento"
+        app:layout_constraintTop_toBottomOf="@id/data_atual_selecionada"
         android:text="Medicamento"/>
 
     <TextView
@@ -115,7 +154,7 @@
         android:layout_marginTop="16dp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/label_data_termino_tratamento"
+        app:layout_constraintTop_toBottomOf="@id/data_atual_selecionada"
         android:text="horário dose"/>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -128,7 +167,7 @@
         app:layout_constraintTop_toBottomOf="@id/label_medicamento"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/medicamento"
+        tools:listitem="@layout/item_detalhes_medicamentos"
         app:layout_constraintBottom_toTopOf="@id/btn_armar_alarme"/>
 
     <com.google.android.gms.ads.AdView
