--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -43,11 +43,21 @@
         <action
             android:id="@+id/action_fragmentDetalhesMedicamentos_to_medicamentosFragment"
             app:destination="@id/medicamentosFragment" />
+        <action
+            android:id="@+id/action_fragmentDetalhesMedicamentos_to_historicoFragment"
+            app:destination="@id/historicoFragment" />
     </fragment>
     <fragment
         android:id="@+id/historicoFragment"
         android:name="com.rubens.applembretemedicamento.presentation.FragmentHistoricoMedicamentos"
         android:label="fragment_historico_medicamentos"
-        tools:layout="@layout/fragment_historico_medicamentos" />
+        tools:layout="@layout/fragment_historico_medicamentos" >
+        <action
+            android:id="@+id/action_historicoFragment_to_medicamentosFragment"
+            app:destination="@id/medicamentosFragment" />
+        <action
+            android:id="@+id/action_historicoFragment_to_fragmentDetalhesMedicamentos"
+            app:destination="@id/fragmentDetalhesMedicamentos" />
+    </fragment>
 
 </navigation>
