--- a/app/src/main/res/layout/fragment_detalhes_medicamentos.xml
+++ b/app/src/main/res/layout/fragment_detalhes_medicamentos.xml
@@ -109,7 +109,8 @@
         android:backgroundTint="?android:textColorPrimary"
         android:layout_marginVertical="10dp"
         app:borderWidth="0dp"
-        android:visibility="gone"
+        android:visibility="invisible"
+        android:clickable="false"
         app:layout_constraintTop_toBottomOf="@id/med_detalhes_recycler_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
