dando uma arrumada na mudança de temas

--- a/app/src/main/res/layout/medicamento.xml
+++ b/app/src/main/res/layout/medicamento.xml
@@ -4,10 +4,10 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/medicamento"
-    app:strokeColor="@color/rosa_salmao"
+    app:strokeColor="?attr/colorPrimary"
     android:layout_marginVertical="16dp"
     app:cardCornerRadius="12dp"
-    android:backgroundTint="@color/rosa_salmao"
+    android:backgroundTint="?attr/colorPrimary"
     app:strokeWidth="2dp"
     android:paddingVertical="20dp"
     app:cardElevation="4dp"
