--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="rosa_salmao">#FA5252</color>
     <color name="rosa_salmao_dark">#952929</color>
     <color name="light_gray">#656565</color>
+    <color name="blue">#065EE2</color>
 
 </resources>
