--- a/app/src/main/res/drawable-v24/ripple_oval.xml
+++ b/app/src/main/res/drawable-v24/ripple_oval.xml
@@ -4,7 +4,7 @@
 
     <item>
         <shape android:shape="oval">
-            <solid android:color="?android:colorAccent"/>
+            <solid android:color="?attr/colorPrimary"/>
         </shape>
 
     </item>
