--- a/app/src/main/res/layout-land/fragment_lista_medicamentos.xml
+++ b/app/src/main/res/layout-land/fragment_lista_medicamentos.xml
@@ -6,18 +6,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.FragmentListaMedicamentos">
 
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/btn_settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/baseline_settings_24"
+        app:tint="?android:textColorPrimary"
+        android:background="?android:attr/actionBarItemBackground"
+        android:layout_marginEnd="16dp"/>
+
     <TextView
         android:id="@+id/medicamentos_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-light"
         android:text="Medicamentos"
         android:textColor="?android:textColorPrimary"
-        android:textSize="22sp"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/btn_settings" />
 
 
     <TextView
@@ -43,8 +54,38 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/data_atual"
+        app:layout_constraintTop_toBottomOf="@id/fab"
         app:layout_constraintBottom_toTopOf="@id/adView"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewLoading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginHorizontal="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ProgressBar
+                android:id="@+id/loadingProgressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="40dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
+
 
 
 
@@ -58,9 +99,10 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:src="@drawable/ic_baseline_add_24"
+        android:layout_marginTop="16dp"
         app:tint="@color/white"
         android:background="@drawable/ripple_oval"
-        app:layout_constraintTop_toTopOf="@id/medicamentos_label"
+        app:layout_constraintTop_toBottomOf="@id/data_atual"
         app:layout_constraintEnd_toEndOf="parent"
         android:contentDescription="@string/res_btn_add" />
 
@@ -71,9 +113,8 @@
         android:layout_width="140dp"
         android:layout_height="140dp"
         android:src="@drawable/caixavazia2"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/txt_no_data"
         android:layout_marginBottom="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -88,9 +129,10 @@
         android:fontFamily="sans-serif"
         android:textColor="?android:textColorPrimary"
         android:textSize="28sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/caixa_vazia"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
     <com.google.android.gms.ads.AdView
