--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,11 +30,13 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/main_menu"
         android:id="@+id/bottomNavigationView"
         />
+
+<!--    app:itemTextColor="?attr/colorPrimary"-->
 
 
     <androidx.fragment.app.FragmentContainerView
