--- a/app/src/main/res/layout/fragment_lista_medicamentos.xml
+++ b/app/src/main/res/layout/fragment_lista_medicamentos.xml
@@ -6,18 +6,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.FragmentListaMedicamentos">
 
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/btn_settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/baseline_settings_24"
+        app:tint="?android:textColorPrimary"
+        android:background="?android:attr/actionBarItemBackground"
+        android:layout_marginEnd="16dp"/>
+
     <TextView
         android:id="@+id/medicamentos_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-light"
         android:text="Medicamentos"
         android:textColor="?android:textColorPrimary"
-        android:textSize="22sp"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/btn_settings" />
 
 
     <TextView
@@ -43,7 +54,7 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/data_atual"
+        app:layout_constraintTop_toBottomOf="@id/fab"
         app:layout_constraintBottom_toTopOf="@id/adView"/>
 
     <androidx.cardview.widget.CardView
@@ -88,9 +99,10 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:src="@drawable/ic_baseline_add_24"
+        android:layout_marginTop="16dp"
         app:tint="@color/white"
         android:background="@drawable/ripple_oval"
-        app:layout_constraintTop_toTopOf="@id/medicamentos_label"
+        app:layout_constraintTop_toBottomOf="@id/data_atual"
         app:layout_constraintEnd_toEndOf="parent"
         android:contentDescription="@string/res_btn_add" />
 
