--- a/app/src/main/res/layout/item_detalhes_medicamentos.xml
+++ b/app/src/main/res/layout/item_detalhes_medicamentos.xml
@@ -62,7 +62,7 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/time_dosage"
-        android:background="#FA5252"/>
+        android:background="?attr/colorPrimary"/>
 
 
 
