arrumei bug do som do alarme

--- a/app/src/main/res/layout-land/fragment_lista_medicamentos.xml
+++ b/app/src/main/res/layout-land/fragment_lista_medicamentos.xml
@@ -106,6 +106,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:contentDescription="@string/res_btn_add" />
 
+    <Button
+        android:id="@+id/btn_stop_service"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="parar service"
+        app:layout_constraintTop_toTopOf="@id/fab"
+        app:layout_constraintBottom_toBottomOf="@id/fab"
+        app:layout_constraintEnd_toStartOf="@id/fab"
+        android:layout_marginEnd="30dp"/>
+
 
 
     <ImageView
