fazendo o fluxo 25 passar

--- a/app/src/main/res/layout/fragment_cadastrar_novo_medicamento.xml
+++ b/app/src/main/res/layout/fragment_cadastrar_novo_medicamento.xml
@@ -103,7 +103,7 @@
                 android:text="dias"
                 android:fontFamily="sans-serif-medium"
                 android:layout_weight="1"
-                android:backgroundTint="@color/rosa_salmao"
+                android:backgroundTint="?attr/colorPrimary"
                 android:textColor="@color/white"
                 android:layout_marginEnd="16dp"
                 android:textStyle="bold"
@@ -117,7 +117,7 @@
                 android:text="meses"
                 android:fontFamily="sans-serif-medium"
                 android:layout_weight="1"
-                android:backgroundTint="@color/rosa_salmao"
+                android:backgroundTint="?attr/colorPrimary"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:textSize="26sp" />
@@ -215,7 +215,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Confirmar Medicação"
-            android:backgroundTint="@color/rosa_salmao"
+            android:backgroundTint="?attr/colorPrimary"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="26sp"
