--- a/app/src/main/res/layout-land/fragment_detalhes_medicamentos.xml
+++ b/app/src/main/res/layout-land/fragment_detalhes_medicamentos.xml
@@ -90,26 +90,33 @@
 
 
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <ImageButton
         android:id="@+id/btn_armar_alarme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:elevation="8dp"
+        android:scaleType="center"
         app:layout_constraintBottom_toTopOf="@id/adView"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginVertical="10dp"
         app:layout_constraintTop_toBottomOf="@id/med_detalhes_recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/ic_baseline_timer_24"
+        android:background="@drawable/ripple_oval"
         app:tint="@color/white"/>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <ImageButton
         android:id="@+id/btn_cancelar_alarme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:background="@drawable/ripple_oval"
         android:backgroundTint="?android:textColorPrimary"
+        android:elevation="8dp"
+        android:scaleType="center"
         android:layout_marginVertical="10dp"
         app:borderWidth="0dp"
-        android:visibility="gone"
+        android:visibility="invisible"
+        android:clickable="false"
         app:layout_constraintTop_toBottomOf="@id/med_detalhes_recycler_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -117,11 +124,14 @@
         android:src="@drawable/ic_baseline_timer_off_24"
         app:tint="?android:textColorSecondary"/>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <ImageButton
         android:id="@+id/btn_parar_som"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
         android:backgroundTint="?android:textColorPrimary"
+        android:background="@drawable/ripple_oval"
+        android:elevation="8dp"
+        android:scaleType="center"
         android:layout_marginVertical="10dp"
         app:borderWidth="0dp"
         android:visibility="gone"
@@ -186,7 +196,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/dica_tomar_dose"
-        app:strokeColor="#FA5252"
+        app:strokeColor="?attr/colorPrimary"
         android:layout_margin="16dp"
         app:strokeWidth="2dp"
         android:clickable="true"
