--- a/app/src/main/res/layout-land/fragment_lista_medicamentos.xml
+++ b/app/src/main/res/layout-land/fragment_lista_medicamentos.xml
@@ -57,33 +57,32 @@
         app:layout_constraintTop_toBottomOf="@id/fab"
         app:layout_constraintBottom_toTopOf="@id/adView"/>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewLoading"
-        android:layout_width="match_parent"
+
+
+    <ProgressBar
+        android:id="@+id/loadingProgressBar"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginHorizontal="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ProgressBar
-                android:id="@+id/loadingProgressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="40dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
-    </androidx.cardview.widget.CardView>
+
+
+
+    <Button
+        android:id="@+id/btn_stop_service"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="parar service"
+        android:backgroundTint="?attr/colorPrimary"
+        app:layout_constraintTop_toTopOf="@id/fab"
+        app:layout_constraintBottom_toBottomOf="@id/fab"
+        app:layout_constraintEnd_toStartOf="@id/fab"
+        android:layout_marginEnd="30dp"/>
 
 
 
@@ -105,16 +104,6 @@
         app:layout_constraintTop_toBottomOf="@id/data_atual"
         app:layout_constraintEnd_toEndOf="parent"
         android:contentDescription="@string/res_btn_add" />
-
-    <Button
-        android:id="@+id/btn_stop_service"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="parar service"
-        app:layout_constraintTop_toTopOf="@id/fab"
-        app:layout_constraintBottom_toBottomOf="@id/fab"
-        app:layout_constraintEnd_toStartOf="@id/fab"
-        android:layout_marginEnd="30dp"/>
 
 
 
