--- a/app/src/main/res/layout/fragment_lista_medicamentos.xml
+++ b/app/src/main/res/layout/fragment_lista_medicamentos.xml
@@ -57,19 +57,7 @@
         app:layout_constraintTop_toBottomOf="@id/fab"
         app:layout_constraintBottom_toTopOf="@id/adView"/>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewLoading"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginHorizontal="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
             <ProgressBar
                 android:id="@+id/loadingProgressBar"
@@ -80,10 +68,9 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </androidx.cardview.widget.CardView>
+
 
 
     <Button
@@ -91,6 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="parar service"
+        android:backgroundTint="?attr/colorPrimary"
         app:layout_constraintTop_toTopOf="@id/fab"
         app:layout_constraintBottom_toBottomOf="@id/fab"
         app:layout_constraintEnd_toStartOf="@id/fab"
