--- a/app/src/main/res/layout/fragment_configuracoes.xml
+++ b/app/src/main/res/layout/fragment_configuracoes.xml
@@ -39,6 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:checked="true"
         app:layout_constraintStart_toEndOf="@id/label_tocar_alarme_ate_com_app_fechado"
         app:layout_constraintTop_toTopOf="@id/label_tocar_alarme_ate_com_app_fechado"
         app:layout_constraintBottom_toBottomOf="@id/label_tocar_alarme_ate_com_app_fechado"
@@ -73,6 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:checked="true"
         app:layout_constraintStart_toEndOf="@id/label_tocar_alarme_ate_depois_de_desligar_cel"
         app:layout_constraintTop_toTopOf="@id/label_tocar_alarme_ate_depois_de_desligar_cel"
         app:layout_constraintBottom_toBottomOf="@id/label_tocar_alarme_ate_depois_de_desligar_cel"
