--- a/app/src/main/res/layout/fragment_configuracoes.xml
+++ b/app/src/main/res/layout/fragment_configuracoes.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:fontFamily="sans-serif-light"
-        android:text="Configurações"
+        android:text="@string/configurations_label"
         android:layout_marginTop="20dp"
         android:textColor="?android:textColorPrimary"
         android:textSize="24sp"
@@ -24,7 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
-        android:text="Tocar alarme até quando o app estiver fechado"
+        android:text="@string/label_config_play_alarm_when_app_closed"
         android:layout_marginTop="20dp"
         android:textColor="?android:textColorPrimary"
         android:lines="2"
@@ -59,7 +59,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
-        android:text="Tocar alarme até depois de desligar o celular"
+        android:text="@string/label_play_alarm_after_device_reboot"
         android:layout_marginTop="20dp"
         android:textColor="?android:textColorPrimary"
         android:lines="2"
@@ -94,7 +94,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
-        android:text="Cor do tema do app"
+        android:text="@string/cor_do_tema_do_app"
         android:layout_marginTop="20dp"
         android:textColor="?android:textColorPrimary"
         android:lines="2"
