--- a/app/src/main/res/layout/fragment_lista_medicamentos.xml
+++ b/app/src/main/res/layout/fragment_lista_medicamentos.xml
@@ -49,6 +49,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
+        tools:listitem="@layout/medicamento"
+        tools:itemCount="7"
         android:layout_marginHorizontal="16dp"
         android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -137,7 +139,7 @@
     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
         ads:layout_constraintStart_toStartOf="parent"
