--- a/app/src/main/res/layout/fragment_cadastrar_novo_medicamento.xml
+++ b/app/src/main/res/layout/fragment_cadastrar_novo_medicamento.xml
@@ -9,7 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/label_title_activity_add_medicine"
@@ -35,7 +35,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:hint="nome remédio"
+            android:hint="@string/medicine_name"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="40dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:hint="vezes por dia"
+            android:hint="@string/times_a_day"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +75,7 @@
             android:id="@+id/label_duracao_tratamento"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Por quanto tempo você vai tomar esse medicamento?"
+            android:text="@string/how_long_will_you_take_this_medicine"
             android:textSize="22sp"
             android:fontFamily="sans-serif-medium"
             android:textColor="?android:textColorPrimary"
@@ -100,7 +100,7 @@
                 android:id="@+id/btn_duracao_dias"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="dias"
+                android:text="@string/days"
                 android:fontFamily="sans-serif-medium"
                 android:layout_weight="1"
                 android:backgroundTint="?attr/colorPrimary"
@@ -114,7 +114,7 @@
                 android:id="@+id/btn_duracao_meses"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="meses"
+                android:text="@string/months"
                 android:fontFamily="sans-serif-medium"
                 android:layout_weight="1"
                 android:backgroundTint="?attr/colorPrimary"
@@ -133,7 +133,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:hint="tempo de tratamento"
+            android:hint="@string/treatment_time"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="0dp"
             android:visibility="invisible"
@@ -154,7 +154,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:hint="horário 1ª dose (ex.: 14:20)"
+            android:hint="@string/first_dose_hint"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -175,7 +175,7 @@
             android:id="@+id/btn_open_time_picker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="horário primeira dose"
+            android:text="@string/pick_time_of_first_dose"
             android:backgroundTint="?attr/colorPrimary"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -201,7 +201,7 @@
             android:textSize="28sp"
             android:textColorHint="@color/light_gray"
             android:fontFamily="sans-serif"
-            android:hint="data início tratamento"
+            android:hint="@string/treatment_start_date"
             app:maskCharacter="_"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="20dp"
@@ -213,7 +213,7 @@
             android:id="@+id/btn_confirm_new_medication"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Confirmar Medicação"
+            android:text="@string/confirm_medication"
             android:backgroundTint="?attr/colorPrimary"
             android:textColor="@color/white"
             android:textStyle="bold"
