--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,11 +6,11 @@
     <item
         android:id="@+id/medicamentosFragment"
         android:icon="@drawable/ic_pills_bottle"
-        android:title="Medicamentos"/>
+        android:title="@string/medicines"/>
 
     <item
         android:id="@+id/historicoFragment"
         android:icon="@drawable/ic_historico"
-        android:title="Histórico"/>
+        android:title="@string/history"/>
 
 </menu>
