--- a/app/src/main/res/layout-land/fragment_lista_medicamentos.xml
+++ b/app/src/main/res/layout-land/fragment_lista_medicamentos.xml
@@ -51,9 +51,9 @@
         android:layout_marginTop="10dp"
         tools:listitem="@layout/medicamento"
         tools:itemCount="7"
-        android:layout_marginHorizontal="16dp"
+        app:spanCount="2"
         android:overScrollMode="never"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fab"
@@ -104,8 +104,9 @@
         android:layout_marginTop="16dp"
         app:tint="@color/white"
         android:background="@drawable/ripple_oval"
-        app:layout_constraintTop_toBottomOf="@id/data_atual"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/btn_settings"
+        app:layout_constraintBottom_toBottomOf="@id/btn_settings"
+        app:layout_constraintEnd_toStartOf="@id/btn_settings"
         android:contentDescription="@string/res_btn_add" />
 
 
