--- a/app/src/main/res/layout/medicamento.xml
+++ b/app/src/main/res/layout/medicamento.xml
@@ -9,6 +9,7 @@
     app:cardCornerRadius="12dp"
     android:backgroundTint="?attr/colorPrimary"
     app:strokeWidth="2dp"
+    android:layout_marginHorizontal="16dp"
     android:paddingVertical="20dp"
     app:cardElevation="4dp"
     android:clickable="true"
