--- a/app/src/main/res/layout-land/fragment_lista_medicamentos.xml
+++ b/app/src/main/res/layout-land/fragment_lista_medicamentos.xml
@@ -75,17 +75,7 @@
 
 
 
-    <Button
-        android:id="@+id/btn_stop_service"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="parar service"
-        android:visibility="gone"
-        android:backgroundTint="?attr/colorPrimary"
-        app:layout_constraintTop_toTopOf="@id/fab"
-        app:layout_constraintBottom_toBottomOf="@id/fab"
-        app:layout_constraintEnd_toStartOf="@id/fab"
-        android:layout_marginEnd="30dp"/>
+
 
 
 
@@ -119,7 +109,8 @@
         app:layout_constraintBottom_toBottomOf="@id/guideline2"
         app:layout_constraintTop_toTopOf="@id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        android:contentDescription="@string/image_you_dont_have_any_medication_registered_yet"/>
 
 
     <TextView
